--- a/diary/css/manage_articles.css
+++ b/diary/css/manage_articles.css
@@ -425,13 +425,6 @@ table {
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-#button_manage_users,
-#button_manage_entries,
-#button_manage_articles,
-#button_logout {
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
 #button_manage_users:hover,
 #button_manage_entries:hover,
 #button_manage_articles:hover,
@@ -467,4 +460,110 @@ table {
 
 #sidebar a {
   text-decoration: none;
+}
+
+#add_article_manage {
+  position: relative;
+  top: 66px;
+  right: 42.9%;
+}
+
+#container_main_manage_articles a {
+  position: relative;
+  left: 40px;
+  text-decoration: none;
+  color: #0e73f6;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: -0.6%;
+  text-align: center;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  max-height: 90vh;
+  overflow-y: auto;
+  position: relative;
+}
+
+.hidden {
+  display: none;
+}
+
+.close-button {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+#submit_modal {
+  width: 10%;
+  height: 20px;
+  background-color: #0e73f6;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.modal-delete-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 1001;
+  width: 300px;
+  text-align: center;
+}
+.confirm-btn {
+  background: red;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.cancel-btn {
+  background: #ddd;
+  color: black;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.edit-article{
+
+}
+
+.delete-article{
+  background-color: lightgreen;
+}
+
+#deleteConfirmBox{
+  position: fixed;
 }
